# python_sem10_final_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.worker  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
migrations/: env.py  script.py.mako
migrations/versions/: 20260521_0001_create_tasks_and_photos.py  20260521_0002_add_queued_task_status.py  20260521_0003_make_photo_task_nullable.py
preview/: app.js  index.html  results.html  results.js  styles.css
src/app/: main.py
src/app/api/: photos.py  schemas.py  tasks.py
src/app/core/: config.py  storage.py
src/app/db/: __init__.py  models.py  session.py
src/app/services/: uploads.py
src/app/worker/: celery_app.py  queue.py  tasks.py
tests/: conftest.py  fakes.py  test_photos_api.py  test_tasks_api.py
